# Gameboy-Emulator

./: .gitignore  0.bootstrap.js  1.bootstrap.js  10.bootstrap.js  Cargo.toml  README.md  asset-manifest.json  bootstrap.js  index.html
.cargo/: config.toml
gameboy_emulator/: .gitignore  Cargo.toml  README.md
gameboy_emulator/benches/: emu_benches.rs  perf.rs
gameboy_emulator/src/: bit_field.rs  cartridge.rs  component.rs  emulator.rs  error.rs  gameboy.rs  interrupt.rs  joypad.rs  lib.rs  main.rs  mainloop.rs  memory.rs  no_gui.rs  timer.rs
gameboy_emulator/src/apu/: apu.rs  channel1.rs  channel2.rs  dac.rs  global_control_regs.rs  mod.rs  noise.rs  square.rs  sweep.rs  utils.rs  volume_envelope.rs  wave.rs
gameboy_emulator/src/cartridge/: mbc1.rs  mbc3.rs
gameboy_emulator/src/cpu/: cpu.rs  instruction.rs  mod.rs  register.rs
gameboy_emulator/src/emulator/: events.rs
gameboy_emulator/src/mainloop/: sdl2.rs
gameboy_emulator/src/ppu/: base_ppu.rs  canvas_engine.rs  lcd.rs  mod.rs  no_gui_engine.rs  palette.rs  renderer.rs
gameboy_emulator/src/ppu/engines/: mod.rs  no_gui_engine.rs  web_engine.rs
gameboy_emulator/src/sdl2/: engine.rs  mainloop.rs  mod.rs
gameboy_emulator/src/sdl2/texture/: texture_book.rs  tile.rs
gameboy_emulator/src/utils/: mod.rs
gameboy_emulator/src/web/: mainloop.rs  mod.rs
gameboy_emulator/tests/: mbctest.gb:Zone.Identifier  test_blargg.rs  test_cpu_instrs.rs  test_dmg_acid.rs  test_halt_bug.rs  test_mooneye.rs
gameboy_emulator/tests/blargg/gb-test-roms-master/: readme.txt
gameboy_emulator/tests/blargg/gb-test-roms-master/interrupt_time/: interrupt_time.s
gameboy_emulator/tests/common/: mod.rs
gameboy_emulator/tests/mooneye/: LICENSE
gameboy_emulator/tests/mooneye/acceptance/: add_sp_e_timing.sym  boot_div-S.sym  boot_div-dmg0.sym  boot_div-dmgABCmgb.sym  boot_div2-S.sym  boot_hwio-S.sym  boot_hwio-dmg0.sym  boot_hwio-dmgABCmgb.sym  boot_regs-dmg0.sym  boot_regs-dmgABC.sym  boot_regs-mgb.sym  boot_regs-sgb.sym  boot_regs-sgb2.sym  call_cc_timing.sym  call_cc_timing2.sym  call_timing.sym  call_timing2.sym  di_timing-GS.sym  div_timing.sym  ei_sequence.sym  ei_timing.sym  halt_ime0_ei.sym  halt_ime0_nointr_timing.sym  halt_ime1_timing.sym  halt_ime1_timing2-GS.sym  if_ie_registers.sym  intr_timing.sym  jp_cc_timing.sym  jp_timing.sym  ld_hl_sp_e_timing.sym  oam_dma_restart.sym  oam_dma_start.sym  oam_dma_timing.sym  pop_timing.sym  push_timing.sym  rapid_di_ei.sym  ret_cc_timing.sym  ret_timing.sym  reti_intr_timing.sym  reti_timing.sym  (+1 more)
gameboy_emulator/tests/mooneye/acceptance/bits/: mem_oam.sym  reg_f.sym  unused_hwio-GS.sym
gameboy_emulator/tests/mooneye/acceptance/instr/: daa.sym
gameboy_emulator/tests/mooneye/acceptance/interrupts/: ie_push.sym
gameboy_emulator/tests/mooneye/acceptance/oam_dma/: basic.sym  reg_read.sym  sources-GS.sym
gameboy_emulator/tests/mooneye/madness/: mgb_oam_dma_halt_sprites.sym
gameboy_emulator/tests/mooneye/manual-only/: sprite_priority.sym
gameboy_emulator/tests/mooneye/misc/: boot_div-A.sym  boot_div-cgb0.sym  boot_div-cgbABCDE.sym  boot_hwio-C.sym  boot_regs-A.sym  boot_regs-cgb.sym
gameboy_emulator/tests/mooneye/utils/: bootrom_dumper.sym  dump_boot_hwio.sym
gameboy_emulator/www/: index.html  index.js  package-lock.json  package.json  saves.js  styles.css  webpack.config.js
src/: .gitignore  (+16 more)
(+193 files in other folders)
