[package]
name = "gameboy_emulator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.9"
log = "0.4"
strum = "0.24"
strum_macros = "0.24"
num = "0.4.0"
clap = { version = "4.1.4", features = ["derive"] }
wasm-bindgen = "0.2.63"
js-sys = "0.3.61"
web-sys = { version="0.3.61", features = ["console"] }
console_error_panic_hook = "0.1.7"

sdl2 = { version = "0.35.2", features = ["bundled", "unsafe_textures"], optional = true }
ringbuf = "0.3.3"

[dev-dependencies]
pprof = { version = "0.3", features = ["flamegraph"] }
criterion = "0.4.0"

[profile.release]
debug = true

[[bench]]
name = "emu_benches"
harness = false

[features]
sdl2-emu= ["sdl2"]

[[bin]]
name = "emulator"
path = "src/main.rs"
required-features = ["sdl2-emu"]

[[bin]]
name = "nogui"
path = "src/no_gui.rs"
